# BSI_Reliability

./: error1.patch  error2.patch  error3.patch  exercise_1.py  testing_report.md
decryption/: cracker.c  cracker.py  pyproject.toml  test.py  wulgaryzmy
encryption/: encryptor.py  encryptor_readme.md
encryption/disc_sim/: text1.txt  text10.txt  text11.txt  text12.txt  text13.txt  text14.txt  text15.txt  text16.txt  text17.txt  text18.txt  text19.txt  text2.txt  text20.txt  text3.txt  text4.txt  text5.txt  text6.txt  text7.txt  text8.txt  text9.txt
oauth/: README.md  app.py
owasp_zap/: report.txt
testing_result/: exercise_1_py.html
